# docs/swagger.json
@@ -62,6 +62,13 @@
                         "description": "add - to sort in descing order",
                         "name": "sort",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization: Bearer XXSGGSSHHSSJSJSSS",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -77,6 +84,42 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/dto.ListMovieResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "status: fail",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/commons.ResponseObject"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.ValidationError"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "403": {
+                        "description": "status: fail",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/commons.ResponseObject"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.ValidationError"
                                         }
                                     }
                                 }
@@ -124,6 +167,13 @@
                         "schema": {
                             "$ref": "#/definitions/dto.MovieRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization: Bearer XXSGGSSHHSSJSJSSS",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -152,6 +202,18 @@
                         }
                     },
                     "400": {
+                        "description": "e.g. status: error, message: the error reason",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
+                    "401": {
+                        "description": "e.g. status: error, message: the error reason",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
+                    "403": {
                         "description": "e.g. status: error, message: the error reason",
                         "schema": {
                             "$ref": "#/definitions/commons.ResponseObject"
@@ -197,6 +259,13 @@
                         "description": "Id of the movie to show",
                         "name": "id",
                         "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization: Bearer XXSGGSSHHSSJSJSSS",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -218,7 +287,19 @@
                             ]
                         }
                     },
-                    "404": {
+                    "400": {
+                        "description": "e.g. status: error, message: the error reason",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
+                    "401": {
+                        "description": "e.g. status: error, message: the error reason",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
+                    "403": {
                         "description": "e.g. status: error, message: the error reason",
                         "schema": {
                             "$ref": "#/definitions/commons.ResponseObject"
@@ -244,11 +325,30 @@
                         "description": "Id of the movie to delete",
                         "name": "id",
                         "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization: Bearer XXSGGSSHHSSJSJSSS",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
+                    "401": {
+                        "description": "e.g. status: error, message: the error reason",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
+                    "403": {
+                        "description": "e.g. status: error, message: the error reason",
                         "schema": {
                             "$ref": "#/definitions/commons.ResponseObject"
                         }
@@ -288,6 +388,13 @@
                         "schema": {
                             "$ref": "#/definitions/dto.MovieRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization: Bearer XXSGGSSHHSSJSJSSS",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -321,6 +428,18 @@
                             "$ref": "#/definitions/commons.ResponseObject"
                         }
                     },
+                    "401": {
+                        "description": "e.g. status: error, message: the error reason",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
+                    "403": {
+                        "description": "e.g. status: error, message: the error reason",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
                     "404": {
                         "description": "e.g. status: error, message: the error reason",
                         "schema": {
@@ -329,6 +448,76 @@
                     },
                     "409": {
                         "description": "e.g. status: error, message: unable to update the record due to an edit conflict, please try again",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    },
+                    "422": {
+                        "description": "status: fail",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/commons.ResponseObject"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.ValidationError"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "e.g. status: error, message: the error reason",
+                        "schema": {
+                            "$ref": "#/definitions/commons.ResponseObject"
+                        }
+                    }
+                }
+            }
+        },
+        "/tokens/authentication": {
+            "post": {
+                "description": "Generate a new token for a user using the given credentials",
+                "tags": [
+                    "Token"
+                ],
+                "summary": "Get user authentication token",
+                "parameters": [
+                    {
+                        "description": "auth token credentials",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.AuthTokenRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/commons.ResponseObject"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.TokenResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "401": {
+                        "description": "e.g. status: error, message: the error reason",
                         "schema": {
                             "$ref": "#/definitions/commons.ResponseObject"
                         }
@@ -555,6 +744,17 @@
                 }
             }
         },
+        "dto.AuthTokenRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.CreateUserRequest": {
             "type": "object",
             "properties": {
@@ -649,6 +849,25 @@
             "properties": {
                 "user": {
                     "$ref": "#/definitions/dto.UserResponse"
+                }
+            }
+        },
+        "dto.Token": {
+            "type": "object",
+            "properties": {
+                "expiry": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "authentication_token": {
+                    "$ref": "#/definitions/dto.Token"
                 }
             }
         },
